fix: 修复/group/members?id= 页面中的错误

--- a/application/extra/view/themes/mincss/group-members.html
+++ b/application/extra/view/themes/mincss/group-members.html
@@ -55,7 +55,7 @@
 				<!--<button class="btn btn-sm btn-success" onclick="group_join_pass('{$member->id}')">{$lang.pass}</button>-->
 				{/if}
 
-				<button class="btn btn-sm btn-c" onclick="group_join_delete('{$member->id}','{$member->user_id}','{$member->nickname}')">{$lang.delete}</button>
+				<button class="btn btn-sm btn-c" onclick="group_join_delete('{$member->id}','{$member->user_id}','{$member->user_id}')">{$lang.delete}</button>
 			</td>
 			{/if}
 		</tr>
