fix: 修复contest首页编辑按钮丢失的问题

--- a/application/extra/view/themes/bootstrap/edit-my-profile.html
+++ b/application/extra/view/themes/bootstrap/edit-my-profile.html
@@ -26,6 +26,7 @@
                     <label class="col-sm-4 control-label"><span style="color: red">*</span> {$lang.fullname}</label>
                     <div class="col-sm-8">
                         <input type="text" class="form-control" name="realname" value="{$user->realname}">
+                        <span style="color: red">{$lang.will_only_show_in_contest}</span>
                     </div>
                 </div>
 
