--- a/application/extra/view/themes/bootstrap/profile.html
+++ b/application/extra/view/themes/bootstrap/profile.html
@@ -66,8 +66,8 @@
 
 				<div class="form-group">
 					<div class="col-sm-8 col-sm-offset-4">
-						<a href="/profile/Editmyprofile" class="btn btn-success">{$lang.edit}</a>
-						<a href="/profile/Changepassword" class="btn btn-default">{$lang.change_password}</a>
+						<a href="/profile/editmyprofile" class="btn btn-success">{$lang.edit}</a>
+						<a href="/profile/changepassword" class="btn btn-default">{$lang.change_password}</a>
 					</div>
 				</div>
 			</div>
