Add theme selector-api /api/theme/select-theme?theme=mincss

--- a/public/static/css/xadmin.css
+++ b/public/static/css/xadmin.css
@@ -20,9 +20,9 @@ body{
 }
 .login-bg{
     /*background: #eeeeee url() 0 0 no-repeat;*/
-     background:url(../images/bg.png) no-repeat center;
+    background:url(../images/bg.png) no-repeat center;
     background-size: cover;
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 .login{
     margin: 120px auto 0 auto;
