--- a/application/admin/view/base.html
+++ b/application/admin/view/base.html
@@ -5,8 +5,7 @@
     <title>{$title|default="江西理工大学编程俱乐部后台管理系统"}</title>
     <meta name="renderer" content="webkit|ie-comp|ie-stand">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport"
-          content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=1.0"/>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="/static/xadmin/css/font.css">
     <link rel="stylesheet" href="/static/xadmin/css/xadmin.css">
