feat: add theme_selector.html & language_selector.html

--- a/application/extra/view/themes/mincss/layout/common.html
+++ b/application/extra/view/themes/mincss/layout/common.html
@@ -59,10 +59,12 @@
 {block name="footer"}
 <div style="text-align: center;margin-top:20px;margin-bottom: 20px;">
 	<hr>
-	&copy; 2018&nbsp;<a href="/">JustOJ</a>&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="javascript:;" onclick="$.get('/api/Uilanguage/set_lang?language=cn',function(d){location.reload();},'json');">中文</a>&nbsp;
-	<a href="javascript:;" onclick="$.get('/api/Uilanguage/set_lang?language=en',function(d){location.reload();},'json');">English</a>&nbsp;
-	| <a href="https://wiki.ismdeep.com/index.php?title=%E6%B1%9F%E8%A5%BF%E7%90%86%E5%B7%A5%E5%A4%A7%E5%AD%A6ACM-ICPC" target="_blank">JxustACM</a>
+	&copy; 2019&nbsp;<a href="/">JustOJ</a>&nbsp;&nbsp;&nbsp;&nbsp;
+	{include file="extra@common_html/theme_selector"}
+	|
+	{include file="extra@common_html/language_selector"}
+	|
+	<a href="https://wiki.ismdeep.com/index.php?title=%E6%B1%9F%E8%A5%BF%E7%90%86%E5%B7%A5%E5%A4%A7%E5%AD%A6ACM-ICPC" target="_blank">JxustACM</a>
 	| <a href="https://justoj.readthedocs.io" target="_blank">Docs</a>
 </div>
 {/block}
