--- a/application/extra/view/themes/bootstrap/training/common.html
+++ b/application/extra/view/themes/bootstrap/training/common.html
@@ -10,14 +10,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/training">训练场</a>
+            <a class="navbar-brand" href="/training">{$lang.training}</a>
         </div>
         <div class="collapse navbar-collapse" id="example-navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="">1</a></li>
-                <li><a href="">2</a></li>
-                <li><a href="">3</a></li>
-            </ul>
+<!--            <ul class="nav navbar-nav">-->
+<!--                <li><a href="">1</a></li>-->
+<!--                <li><a href="">2</a></li>-->
+<!--                <li><a href="">3</a></li>-->
+<!--            </ul>-->
             <ul class="nav navbar-nav navbar-right">
                 <li><a class="" href="/"><span class="glyphicon glyphicon-home"></span> {$lang.back_to_home}</a></li>
             </ul>
