--- a/application/extra/view/themes/bootstrap/layout/common.html
+++ b/application/extra/view/themes/bootstrap/layout/common.html
@@ -158,7 +158,7 @@
 				,btn: ['我知道了，不再提示。', '关闭']
 				,btnAlign: 'c'
 				,moveType: 1 //拖拽模式，0或者1
-				,content: '<div style="padding: 50px; line-height: 22px; background-color: #393D49; color: #fff; font-weight: 300;">您在访问本站发现任何问题或提出任何建议都可直接发送邮件至 ismdeep@protonmail.com ，此邮件地址也会出现在网站底部。谢谢。</div>'
+				,content: '<div style="padding: 50px; line-height: 22px; background-color: #393D49; color: #fff; font-weight: 300;">您在访问本站时发现任何问题或想提出任何建议都可直接发送邮件至 ismdeep@protonmail.com ，此邮件地址也会出现在网站底部。谢谢。</div>'
 				, yes: function() {
 					localStorage.setItem('tip-already-know', true);
 					layer.closeAll();
