feat: generate email address dynamically

--- a/application/admin/view/index/welcome.html
+++ b/application/admin/view/index/welcome.html
@@ -113,7 +113,7 @@
                 </tr>
                 <tr>
                     <th>开发者</th>
-                    <td>ismdeep(ismdeep@live.com) 江木</td></tr>
+                    <td>ismdeep(ismdeep@protonmail.com) 江木</td></tr>
                 </tbody>
             </table>
         </div>
