--- a/application/extra/view/themes/bootstrap/layout/common.html
+++ b/application/extra/view/themes/bootstrap/layout/common.html
@@ -134,7 +134,7 @@
 	|
 	{include file="extra@common_html/language_selector"}
 	|
-	<a id="email-address-a" href="javascript:"></a>
+	<a id="email-address-a" href="javascript:">**********************</a>
 	|
 	<a href="https://wiki.ismdeep.com/index.php?title=%E6%B1%9F%E8%A5%BF%E7%90%86%E5%B7%A5%E5%A4%A7%E5%AD%A6ACM-ICPC" target="_blank">JxustACM</a>
 	|
