--- a/application/extra/view/themes/bootstrap/rank.html
+++ b/application/extra/view/themes/bootstrap/rank.html
@@ -19,7 +19,7 @@
 			<td>{$cur_rank}</td>
 			<td><div class="center"><a href="/user/Info?user={$user->user_id}">{$user->user_id}</a></div></td>
 			<td><div class="center">{$user->nick}</div></td>
-			<td><div class="center"><a href="/status?username={$user->user_id}&amp;jresult=4">{$user->solved}</a></div></td>
+			<td><div class="center"><a href="/status?username={$user->user_id}&amp;result=4">{$user->solved}</a></div></td>
 			<td><div class="center"><a href="/status?username={$user->user_id}">{$user->submit}</a></div></td>
 		</tr>
 		<?php $cur_rank++;?>
