--- a/application/extra/view/themes/bootstrap/edit-my-profile.html
+++ b/application/extra/view/themes/bootstrap/edit-my-profile.html
@@ -48,6 +48,7 @@
                     <label class="col-sm-4 control-label">{$lang.class}</label>
                     <div class="col-sm-8">
                         <input type="text" class="form-control" name="class" value="{$user->class}">
+                        <span style="color: red">{$lang.eg}: 计算机182班</span>
                     </div>
                 </div>
 
