--- a/application/extra/view/themes/bootstrap/edit-my-profile.html
+++ b/application/extra/view/themes/bootstrap/edit-my-profile.html
@@ -26,7 +26,7 @@
                     <label class="col-sm-4 control-label"><span style="color: red">*</span> {$lang.fullname}</label>
                     <div class="col-sm-8">
                         <input type="text" class="form-control" name="realname" value="{$user->realname}">
-                        <span style="color: red">{$lang.will_only_show_in_contest}</span>
+                        <span>{$lang.will_only_show_in_contest}</span>
                     </div>
                 </div>
 
@@ -48,7 +48,7 @@
                     <label class="col-sm-4 control-label">{$lang.class}</label>
                     <div class="col-sm-8">
                         <input type="text" class="form-control" name="class" value="{$user->class}">
-                        <span style="color: red">{$lang.eg}: 计算机182班</span>
+                        <span>{$lang.eg}: 计算机182班</span>
                     </div>
                 </div>
 
