Add Tourist Module

--- a/application/admin/view/contest/contest_list.html
+++ b/application/admin/view/contest/contest_list.html
@@ -38,7 +38,7 @@
               elem: '#contest-list'
             , url: '/admin/contest/contest_list_json'
             , cols: [[
-                  {field: 'contest_id', title: 'id'}
+                  {field: 'contest_id', title: 'ID'}
                 , {field: 'title', title: '标题'}
                 , {field: 'private', title: '权限', templet: '#privateTpl'}
                 , {field: 'defunct', title: '状态', templet: '#defunctTpl'}
