--- a/application/admin/view/index/welcome.html
+++ b/application/admin/view/index/welcome.html
@@ -75,28 +75,31 @@
                     <td>Linux</td></tr>
                 <tr>
                     <th>运行环境</th>
-                    <td>Apache/2.4.23 (Win32) OpenSSL/1.0.2j mod_fcgid/2.3.9</td></tr>
+                    <td>nginx/1.15.9</td></tr>
                 <tr>
                     <th>PHP版本</th>
-                    <td>5.6.27</td></tr>
+                    <td><?php echo PHP_VERSION;?></td></tr>
                 <tr>
                     <th>PHP运行方式</th>
-                    <td>cgi-fcgi</td></tr>
+                    <td>php-fpm</td></tr>
                 <tr>
                     <th>MYSQL版本</th>
-                    <td>5.6.53</td></tr>
+                    <td>5.7.28</td></tr>
                 <tr>
                     <th>ThinkPHP</th>
-                    <td>5.0.18</td></tr>
+                    <td>{$thinkphp_version}</td></tr>
                 <tr>
                     <th>上传附件限制</th>
-                    <td>2M</td></tr>
+                    <td><?php echo ini_get('upload_max_filesize'); ?></td></tr>
                 <tr>
                     <th>执行时间限制</th>
-                    <td>30s</td></tr>
+                    <td><?php echo ini_get('max_execution_time'); ?>s</td></tr>
                 <tr>
-                    <th>剩余空间</th>
+                    <th>剩余空间 /</th>
                     <td>{$free_space}G</td></tr>
+                <tr>
+                    <th>剩余空间 /home</th>
+                    <td>{$free_space_home}G</td></tr>
                 </tbody>
             </table>
         </div>
