--- a/application/admin/view/problem/problem_list.html
+++ b/application/admin/view/problem/problem_list.html
@@ -2,8 +2,6 @@
 {block name="content"}
 <div class="x-body">
     <div class="layui-row">
-
-
         <form class="layui-form layui-col-md12 x-so" id="problemFilterForm">
             <a class="layui-btn" href="javascript:"
                onclick="x_admin_show('添加题目','/admin/problem/add', 800, 530);">添加题目</a>
@@ -52,9 +50,11 @@
             elem: '#problem-list'
             , url: '/admin/problem/problem_list_json'
             , cols: [[
-                {field: 'problem_id', title: 'id', templet: '#problemIdTpl'}
+                  {field: 'problem_id', title: 'id', templet: '#problemIdTpl'}
                 , {field: 'title', title: '标题'}
-                , {field: 'defunct', width: 80, title: '状态', templet: '#defunctTpl'}
+                , {field: 'source', title: '来源'}
+                , {field: 'create_time', title: '创建时间'}
+                , {field: 'defunct',  title: '状态', templet: '#defunctTpl'}
                 , {field: 'problem_id', title: '操作', templet: '#operationTpl'}
                 , {field: 'problem_id', title: '训练场', templet: '#addToTrainingTpl'}
             ]]
@@ -62,6 +62,7 @@
             , page: true
         });
     });
+
 
     function enable_problem(problem_id) {
         layer.confirm('确定启用？', function(){
