feat: 关闭 训练场、作业 导航栏入口

--- a/application/extra/view/themes/bootstrap/layout/common.html
+++ b/application/extra/view/themes/bootstrap/layout/common.html
@@ -99,8 +99,8 @@
 						<li><a href="/groups">{$lang.allgroup}</a></li>
 					</ul>
 				</li>
-				<li{if $nav == 'training'} class="active"{/if}><a href="/training">{$lang.training}</a></li>
-				<li{if $nav == 'homeworks'} class="active"{/if}><a href="/homeworks">{$lang.homework}</a></li>
+<!--				<li{if $nav == 'training'} class="active"{/if}><a href="/training">{$lang.training}</a></li>-->
+<!--				<li{if $nav == 'homeworks'} class="active"{/if}><a href="/homeworks">{$lang.homework}</a></li>-->
 				<li{if $nav == 'contests'} class="active"{/if}><a href="/contests">{$lang.contest}</a></li>
 				<li{if $nav == 'paste'} class="active"{/if}><a href="/paste">{$lang.paste_code}</a></li>
 			</ul>
