关闭旅游队分页功能

--- a/application/admin/view/contest/edit_tourist.html
+++ b/application/admin/view/contest/edit_tourist.html
@@ -54,7 +54,7 @@
                 , {field: 'id', title: '操作', templet: '#operationTpl'}
             ]]
             , id: 'tourist_list'
-            , page: true
+            , page: false
             , where: {
                 "contest_id": {$contest_id}
             }
