docs: change contact mail to ismdeep@qq.com

--- a/application/admin/view/index/welcome.html
+++ b/application/admin/view/index/welcome.html
@@ -116,7 +116,7 @@
                 </tr>
                 <tr>
                     <th>开发者</th>
-                    <td>ismdeep(ismdeep@protonmail.com) 江木</td></tr>
+                    <td>ismdeep(ismdeep@qq.com) 江木</td></tr>
                 </tbody>
             </table>
         </div>
