--- a/application/extra/view/themes/bootstrap/layout/common.html
+++ b/application/extra/view/themes/bootstrap/layout/common.html
@@ -146,13 +146,13 @@
 <script type="text/javascript">
 
 	function genEmailAddress () {
-		const str1 = "ail.c";
+		const str1 = "c";
 		const str2 = "is";
-		const str3 = "ot";
+		const str3 = "q";
 		const str4 = "mde";
 		const str5 = "om";
-		const str6 = "@pr";
-		const str7 = "onm";
+		const str6 = "@q";
+		const str7 = ".";
 		const str8 = "ep";
 		return str2 + str4 + str8 + str6 + str3 + str7 + str1 + str5;
 	}
