--- a/application/extra/view/themes/bootstrap/index.html
+++ b/application/extra/view/themes/bootstrap/index.html
@@ -49,8 +49,102 @@
 				{/volist}
 				</ul>
 				{/if}
+			</div>
 
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title">
+						近期比赛
+					</h3>
+				</div>
+				<div class="panel-body">
+					<table class="table">
+						<thead>
+						<tr>
+							<th>Status</th>
+							<th>Count</th>
+						</tr>
+						</thead>
+						<tbody>
+						<tr>
+							<td>Pending</td>
+							<td id="pending_cnt"></td>
+						</tr>
+						<tr>
+							<td>Rejudge</td>
+							<td id="rejudging_cnt"></td>
+						</tr>
+						<tr>
+							<td>Compiling</td>
+							<td id="compiling_cnt"></td>
+						</tr>
+						<tr>
+							<td>Running</td>
+							<td id="running_cnt"></td>
+						</tr>
+						<tr>
+							<td>AC</td>
+							<td id="ac_cnt"></td>
+						</tr>
+						<tr>
+							<td>PE</td>
+							<td id="pe_cnt"></td>
+						</tr>
+						<tr>
+							<td>WA</td>
+							<td id="wa_cnt"></td>
+						</tr>
+						<tr>
+							<td>TLE</td>
+							<td id="tle_cnt"></td>
+						</tr>
+						<tr>
+							<td>MLE</td>
+							<td id="mle_cnt"></td>
+						</tr>
+						<tr>
+							<td>OLE</td>
+							<td id="ole_cnt"></td>
+						</tr>
+						<tr>
+							<td>RE</td>
+							<td id="re_cnt"></td>
+						</tr>
+						<tr>
+							<td>CE</td>
+							<td id="ce_cnt"></td>
+						</tr>
+						</tbody>
+					</table>
+				</div>
 			</div>
 		</div>
+	</div>
 </div>
+
+<script type="text/javascript">
+	function fetch_data() {
+		$.get('/api/info/solution_statistics', function(d){
+			console.log(d);
+			$('#pending_cnt').html(d.pending_cnt);
+			$('#rejudging_cnt').html(d.rejudging_cnt);
+			$('#compiling_cnt').html(d.compiling_cnt);
+			$('#running_cnt').html(d.running_cnt);
+			$('#ac_cnt').html(d.ac_cnt);
+			$('#pe_cnt').html(d.pe_cnt);
+			$('#wa_cnt').html(d.wa_cnt);
+			$('#tle_cnt').html(d.tle_cnt);
+			$('#mle_cnt').html(d.mle_cnt);
+			$('#ole_cnt').html(d.ole_cnt);
+			$('#re_cnt').html(d.re_cnt);
+			$('#ce_cnt').html(d.ce_cnt);
+		}, 'json');
+	}
+	$(function(){
+		fetch_data();
+		setInterval(function(){
+			fetch_data();
+		}, 1000);
+	});
+</script>
 {/block}
