--- a/application/extra/view/themes/bootstrap/index.html
+++ b/application/extra/view/themes/bootstrap/index.html
@@ -54,15 +54,15 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h3 class="panel-title">
-						近期比赛
+						判题状态
 					</h3>
 				</div>
 				<div class="panel-body">
 					<table class="table">
 						<thead>
 						<tr>
-							<th>Status</th>
-							<th>Count</th>
+							<th>状态</th>
+							<th>数量</th>
 						</tr>
 						</thead>
 						<tbody>
