--- a/application/extra/view/themes/bootstrap/status-rejudge.html
+++ b/application/extra/view/themes/bootstrap/status-rejudge.html
@@ -2,7 +2,7 @@
 {block name="navpart"}{/block}
 {block name='titlepart'}{$lang['status']} - {$lang['justoj']}{/block}
 {block name="body"}
-<div class="container">
+<div class="container" style="margin: 10px">
     <br>
     <div class="row">
         <span>ProblemID: {$id}</span>
@@ -14,6 +14,9 @@
                 <div class="progress-bar" id="rejudge-progress-bar" style="width: 0%"></div>
             </div>
         </div>
+        <div class="span4" id="success-tip">
+
+        </div>
     </div>
 </div>
 
@@ -21,12 +24,20 @@
 
 <script type="text/javascript">
     $(function(){
+        let flag = true;
         setInterval(function(){
             console.log(id);
-            $.post('/status/rejudge/problem_json', {'id': id}, function(d){
-                $('#rejudge-progress-bar').attr('style', 'width: ' + d.retdata.percent_text);
-                $('#rejudge-progress-bar').html(d.retdata.done_cnt + ' / ' + d.retdata.total_cnt);
-            }, 'json');
+            if (flag) {
+                $.post('/status/rejudge/problem_json', {'id': id}, function(d){
+                    $('#rejudge-progress-bar').attr('style', 'width: ' + d.retdata.percent_text);
+                    $('#rejudge-progress-bar').html(d.retdata.done_cnt + ' / ' + d.retdata.total_cnt);
+                    if (d.retdata.done_cnt >= d.retdata.total_cnt) {
+                        flag = false;
+                        $('#rejudge-progress-bar').addClass('progress-bar-success');
+                        $('#success-tip').html("重判完成");
+                    }
+                }, 'json');
+            }
             // console.log(new Date());
         }, 300);
     });
