--- a/application/extra/view/themes/bootstrap/problem.html
+++ b/application/extra/view/themes/bootstrap/problem.html
@@ -24,7 +24,7 @@
 			<div class="panel-body">
 				<span class=green>{$lang.time_limit}: </span>C/C++ {$problem->time_limit} s &nbsp;&nbsp;&nbsp;&nbsp; Java/Python {$problem->time_limit * 3} s &nbsp;&nbsp;&nbsp;&nbsp;
 				<span class=green>{$lang.memory_limit}: </span>{$problem->memory_limit} MB &nbsp;&nbsp;&nbsp;&nbsp;
-				<span class=green>{$lang.accepted}: </span><a href="/status?problem_id={$problem->problem_id}&result=4" target="_blank">{$problem->solved}</a> &nbsp;&nbsp;&nbsp;&nbsp;
+				<span class=green>{$lang.accepted}: </span><a href="/status?problem_id={$problem->problem_id}&result=4" target="_blank">{$problem->accepted}</a> &nbsp;&nbsp;&nbsp;&nbsp;
 				<span class=green>{$lang.submit}: </span><a href="/status?problem_id={$problem->problem_id}" target="_blank">{$problem->submit}</a>
 			</div>
 		</div>
